--- a/views/companyWiseDetails.ejs
+++ b/views/companyWiseDetails.ejs
@@ -2,65 +2,69 @@
     <%- include('MenuBarCustomer') %>
         <div class="container-fluid">
             <div>
-                <div
-                    style="  margin-top: 0%;border-radius: 10px; border: 5px solid rgba(255, 255, 255, 0.268);      background-color: rgba(65, 90, 69, 0.762) ; height: 100%;">
-
+                <div style="margin-top: 0%;border-radius: 10px; border: 5px solid rgba(255, 255, 255, 0.268);      background-color: rgba(65, 90, 69, 0.762) ; height: 100%;">
                     <div class="input-group  position-absolute d-flex ">
                         <!-- Main Search box Start here -->
                         <div class=" d-flex mb-3">
-                            <div class="d-flex   "
+                            <div class="d-flex justify-content-center"
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                                <button class="btn d-flex">
-                                    <h5 class="  text-light ">Location </h5>
-                                    <select name="ditrictName" type="text"
-                                        data-hotels="<%= JSON.stringify(generalData) %>" name="SearchText"
-                                        class="   SearchTextBox text-light fw-lighter" id="idSearchText"
-                                        onchange="loadHotel(event.target.value,'' ), loadSearchResult()">
-                                        <option style="background-color: rgba(36, 74, 36, 0.777); height: 100px;"
-                                            class="col-12 SearchTextBox text-light fw-LIGHTER" value="">All the Space we
-                                            have
-                                        </option>
-                                        <% district.forEach(element=> { %>
-                                            <option style="background-color: rgba(36, 74, 36, 0.86); height: 100px;"
-                                                class="col-12 SearchTextBox text-light fw-LIGHTER"
-                                                value="<%= element  %>">
-                                                <%= element %>
-                                            </option>
-                                            <% }) %>
+                                <button type="button" class="input-group-text text-light btn"
+                                style="background-color: transparent;" id="iDServiceImages1btn2">Location</button>
+                                <select name="ditrictName" type="text" value="<%= inputData.ditrictName %>" 
+                                    data-hotels="<%= JSON.stringify(generalData) %>" name="SearchText"
+                                    class="   SearchTextBox text-light fw-lighter" id="idSearchText"
+                                    onchange="loadHotel(event.target.value,'' ), loadSearchResult()">
+                                   
+                                    <option style="background-color: rgba(36, 74, 36, 0.777); height: 100px;"
+                                        class="col-12 SearchTextBox text-light fw-LIGHTER" value="<%= inputData.ditrictName %>" > <%= inputData.ditrictName %>
+                                    </option>
+                                    <option style="background-color: rgba(36, 74, 36, 0.777); height: 100px;"
+                                    class="col-12 SearchTextBox text-light fw-LIGHTER" value="">All the Space we
+                                    have
+                                </option>
+                                     
 
-                                    </select>
-                                </button>
+                                    <% district.forEach(element=> { %>
+                                        <option style="background-color: rgba(36, 74, 36, 0.86); height: 100px;"
+                                            class="col-12 SearchTextBox text-light fw-LIGHTER"
+                                            value="<%= element  %>">
+                                            <%= element %>
+                                        </option>
+                                        <% }) %>
+                                         
+                                </select>
+                                    
+                                
+                            </div>
+
+                            <div class="d-flex justify-content-center"
+                                style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
+                                <button type="button" class="input-group-text text-light btn"
+                                    style="background-color: transparent;" id="iDServiceImages1btn2">Check-in</button>
+                                <input name="CheckinDate" id="idStartDate" type="datetime-local" value="<%= inputData.CheckinDate %>" class="text-light SearchTextBox ">
                             </div>
 
                             <div class="d-flex justify-content-center   "
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                                 <button type="button" class="input-group-text text-light btn"
-                                    style="background-color: transparent;" id="iDServiceImages1btn2">Check-in</button>
-                                <input name="CheckinDate" id="idStartDate" type="datetime-local"
-                                    class="text-light SearchTextBox ">
+                                    style="background-color: transparent;" id="iDServiceImages1btn2">Check-out</button>
+                                <input name="CheckoutDate" id="idEndDate" type="datetime-local" value="<%= inputData.CheckoutDate %>" class="text-light SearchTextBox ">
                             </div>
 
-                            <div class="d-flex  justify-content-between  "
-                                style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                                <button type="button" class="input-group-text text-light btn "
-                                    style="background-color: transparent;" id=" iDServiceImages1btn2">Check-out
-                                </button>
-                                <input id="idEndDate" type="datetime-local" name=" CheckoutDate"
-                                    class="text-light  SearchTextBox">
-                            </div>
+                             
 
                             <div class="d-flex   "
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                                 <button type="button" class="input-group-text text-light btn"
                                     style="background-color: transparent;" id=" iDServiceImages1btn2">GUEST</button>
-                                <input id="idGuestCount" type="number" name="GuestCount"
+                                <input id="idGuestCount" type="number" name="GuestCount" value="<%= inputData.GuestCount %>"
                                     class="text-light    SearchTextBox">
                             </div>
                             <div class="d-flex   "
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                                 <button type="button" class="input-group-text text-light btn "
                                     style="background-color: transparent;" id=" iDServiceImages1btn2">ROOMS </button>
-                                <input id="idRoomCount" type="number" name="roomCount"
+                                <input id="idRoomCount" type="number" name="roomCount" value="<%= inputData.roomCount %>"
                                     class="text-light   SearchTextBox">
                             </div>
 
@@ -82,13 +86,13 @@
                                 id="iDServiceImages1btn2"> Minimum
                                 budget</button>
                             <input id="idBudgetFrom" style="background-color:rgba(36, 74, 36, 0);" type="number"
-                                onchange="loadSearchResult()" name="budgetEnd" class="text-light SearchTextBox">
+                                onchange="loadSearchResult()" value="<%= inputData.budgetStart %>" name="budgetEnd" class="text-light SearchTextBox">
                         </div>
 
                         <div class="d-flex m-1 "
                             style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                             <input id="idBudgetEnd" style="background-color:rgba(36, 74, 36, 0);" type="number"
-                                onchange="loadSearchResult()" name="" class="text-light  SearchTextBox">
+                            value="<%= inputData.budgetEnd %>"  onchange="loadSearchResult()" name="budgetStart" class="text-light  SearchTextBox">
                             <button type="button" class="input-group-text text-light btn" id=" iDServiceImages1btn2">
                                 <Main> Maximum Limit </Main>
                             </button>
@@ -102,18 +106,25 @@
                                 category</button>
                             <select id="idSelectTariff" class="input-group-text text-light btn col-12"
                                 name="roomCategoryID">
+                               
                                 <option value="">All</option>
                                 <% tariff.forEach(item=> { %>
-                                    <option class="btn col-12 " style="background-color:rgba(36, 74, 36, 0.196); "
-                                        value=" <%=item.tariffIndex %>">
-                                        <%= item.tariffName %>
-                                    </option>
+                                    <% console.log(item.tariffIndex==inputData.roomCategoryID) %>
+                                        <% if (item.tariffIndex==inputData.roomCategoryID) { %>
+                                            <option value="<%= item.tariffIndex %>" selected > <%= item.tariffName %> </option>
+                                        <% } else { %>
+                                            <option class="btn col-12 " style="background-color:rgba(36, 74, 36, 0.196); "
+                                                value=" <%=item.tariffIndex %>">
+                                                <%= item.tariffName %>
+                                            </option>
+                                        <% } %>
                                     <% }) %>
-
+                                    
                             </select>
                         </div>
-                        <div>
-                            <button type="submit" class="btn text-light btn-secondary "> LOAD </button>
+                        <div class="d-flex m-1 "
+                        style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
+                            <button   type="button" class="btn text-light btn-secondary bi bi-search "> LOAD </button>
                         </div>
                     </div>
 
@@ -165,11 +176,11 @@
                         </button>
                     </div>
                 </div>
-                <div class="col-7">
-                    <div class=" py-vh-4 bg-gray-100 w-100 overflow-hidden container d-flex"
-                        style="flex-wrap: wrap;display: flex;" id="idTariffDetails++">
+                <div class="col-7 d-flex " style="flex-wrap: wrap;display: flex;">
+                    <%= console.log(result) %>
+                    <% result.forEach(element => { %>
                         <div class="card col-4 p-1" style="width: 18rem;">
-                            <img src="img/webp/person11.webp" class="card-img-top p-1" alt="...">
+                            <img src="<%=element  %>" class="card-img-top p-1" alt="...">
                             <div class="card-body">
                                 <h4 class="card-title">Deluxe :7500/- <small>(2pax)</small> </h4>
                                 <small> Extra pax:850/-</small>
@@ -197,8 +208,8 @@
                                     Cart</a>
                             </div>
                         </div>
-
-                    </div>
+                     
+                    <% }) %>
                 </div>
                 <div class="col-1">
                     additional Search
