--- a/views/detailedSearch.ejs
+++ b/views/detailedSearch.ejs
@@ -1,67 +1,71 @@
 <%- include('header') %>
     <%- include('MenuBarCustomer') %>
-
+    <form action="/custom/TariffSearch" method="post" >
         <div class="container-fluid">
             <div>
-                <div
-                    style="  margin-top: 0%;border-radius: 10px; border: 5px solid rgba(255, 255, 255, 0.268);      background-color: rgba(65, 90, 69, 0.762) ; height: 100%;">
-
+                <div style="margin-top: 0%;border-radius: 10px; border: 5px solid rgba(255, 255, 255, 0.268);      background-color: rgba(65, 90, 69, 0.762) ; height: 100%;">
                     <div class="input-group  position-absolute d-flex ">
                         <!-- Main Search box Start here -->
                         <div class=" d-flex mb-3">
-                            <div class="d-flex   "
+                            <div class="d-flex justify-content-center"
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                                <button class="btn d-flex">
-                                    <h5 class="  text-light ">Location </h5>
-                                    <select name="ditrictName" type="text"
-                                        data-hotels="<%= JSON.stringify(generalData) %>" name="SearchText"
-                                        class="   SearchTextBox text-light fw-lighter" id="idSearchText"
-                                        onchange="loadHotel(event.target.value,'' ), loadSearchResult()">
-                                        <option style="background-color: rgba(36, 74, 36, 0.777); height: 100px;"
-                                            class="col-12 SearchTextBox text-light fw-LIGHTER" value="">All the Space we
-                                            have
-                                        </option>
-                                        <% district.forEach(element=> { %>
-                                            <option style="background-color: rgba(36, 74, 36, 0.86); height: 100px;"
-                                                class="col-12 SearchTextBox text-light fw-LIGHTER"
-                                                value="<%= element  %>">
-                                                <%= element %>
-                                            </option>
-                                            <% }) %>
+                                <button type="button" class="input-group-text text-light btn"
+                                style="background-color: transparent;" id="iDServiceImages1btn2">Location</button>
+                                <select name="ditrictName" type="text" value="<%= inputData.ditrictName %>" 
+                                    data-hotels="<%= JSON.stringify(generalData) %>" name="SearchText"
+                                    class="   SearchTextBox text-light fw-lighter" id="idSearchText"
+                                    onchange="loadHotel(event.target.value,'' ), loadSearchResult()">
+                                   
+                                    <option style="background-color: rgba(36, 74, 36, 0.777); height: 100px;"
+                                        class="col-12 SearchTextBox text-light fw-LIGHTER" value="<%= inputData.ditrictName %>" > <%= inputData.ditrictName %>
+                                    </option>
+                                    <option style="background-color: rgba(36, 74, 36, 0.777); height: 100px;"
+                                    class="col-12 SearchTextBox text-light fw-LIGHTER" value="">All the Space we
+                                    have
+                                </option>
+                                     
 
-                                    </select>
-                                </button>
+                                    <% district.forEach(element=> { %>
+                                        <option style="background-color: rgba(36, 74, 36, 0.86); height: 100px;"
+                                            class="col-12 SearchTextBox text-light fw-LIGHTER"
+                                            value="<%= element  %>">
+                                            <%= element %>
+                                        </option>
+                                        <% }) %>
+                                         
+                                </select>
+                                    
+                                
+                            </div>
+
+                            <div class="d-flex justify-content-center"
+                                style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
+                                <button type="button" class="input-group-text text-light btn"
+                                    style="background-color: transparent;" id="iDServiceImages1btn2">Check-in</button>
+                                <input name="CheckinDate" id="idStartDate" type="datetime-local" value="<%= inputData.CheckinDate %>" class="text-light SearchTextBox ">
                             </div>
 
                             <div class="d-flex justify-content-center   "
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                                 <button type="button" class="input-group-text text-light btn"
-                                    style="background-color: transparent;" id="iDServiceImages1btn2">Check-in</button>
-                                <input name="CheckinDate" id="idStartDate" type="datetime-local"
-                                    class="text-light SearchTextBox ">
+                                    style="background-color: transparent;" id="iDServiceImages1btn2">Check-out</button>
+                                <input name="CheckoutDate" id="idEndDate" type="datetime-local" value="<%= inputData.CheckoutDate %>" class="text-light SearchTextBox ">
                             </div>
 
-                            <div class="d-flex  justify-content-between  "
-                                style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                                <button type="button" class="input-group-text text-light btn "
-                                    style="background-color: transparent;" id=" iDServiceImages1btn2">Check-out
-                                </button>
-                                <input id="idEndDate" type="datetime-local" name=" CheckoutDate"
-                                    class="text-light  SearchTextBox">
-                            </div>
+                             
 
                             <div class="d-flex   "
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                                 <button type="button" class="input-group-text text-light btn"
                                     style="background-color: transparent;" id=" iDServiceImages1btn2">GUEST</button>
-                                <input id="idGuestCount" type="number" name="GuestCount"
+                                <input id="idGuestCount" type="number" name="GuestCount" value="<%= inputData.GuestCount %>"
                                     class="text-light    SearchTextBox">
                             </div>
                             <div class="d-flex   "
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                                 <button type="button" class="input-group-text text-light btn "
                                     style="background-color: transparent;" id=" iDServiceImages1btn2">ROOMS </button>
-                                <input id="idRoomCount" type="number" name="roomCount"
+                                <input id="idRoomCount" type="number" name="roomCount" value="<%= inputData.roomCount %>"
                                     class="text-light   SearchTextBox">
                             </div>
 
@@ -83,13 +87,13 @@
                                 id="iDServiceImages1btn2"> Minimum
                                 budget</button>
                             <input id="idBudgetFrom" style="background-color:rgba(36, 74, 36, 0);" type="number"
-                                onchange="loadSearchResult()" name="budgetEnd" class="text-light SearchTextBox">
+                                onchange="loadSearchResult()" value="<%= inputData.budgetStart %>" name="budgetEnd" class="text-light SearchTextBox">
                         </div>
 
                         <div class="d-flex m-1 "
                             style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                             <input id="idBudgetEnd" style="background-color:rgba(36, 74, 36, 0);" type="number"
-                                onchange="loadSearchResult()" name="" class="text-light  SearchTextBox">
+                            value="<%= inputData.budgetEnd %>"  onchange="loadSearchResult()" name="budgetStart" class="text-light  SearchTextBox">
                             <button type="button" class="input-group-text text-light btn" id=" iDServiceImages1btn2">
                                 <Main> Maximum Limit </Main>
                             </button>
@@ -103,18 +107,25 @@
                                 category</button>
                             <select id="idSelectTariff" class="input-group-text text-light btn col-12"
                                 name="roomCategoryID">
+                               
                                 <option value="">All</option>
                                 <% tariff.forEach(item=> { %>
-                                    <option class="btn col-12 " style="background-color:rgba(36, 74, 36, 0.196); "
-                                        value=" <%=item.tariffIndex %>">
-                                        <%= item.tariffName %>
-                                    </option>
+                                    <% console.log(item.tariffIndex==inputData.roomCategoryID) %>
+                                        <% if (item.tariffIndex==inputData.roomCategoryID) { %>
+                                            <option value="<%= item.tariffIndex %>" selected > <%= item.tariffName %> </option>
+                                        <% } else { %>
+                                            <option class="btn col-12 " style="background-color:rgba(36, 74, 36, 0.196); "
+                                                value=" <%=item.tariffIndex %>">
+                                                <%= item.tariffName %>
+                                            </option>
+                                        <% } %>
                                     <% }) %>
-
+                                    
                             </select>
                         </div>
-                        <div>
-                            <button type="submit" class="btn text-light btn-secondary "> LOAD </button>
+                        <div class="d-flex m-1 "
+                        style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
+                            <button   type="button" class="btn text-light btn-secondary bi bi-search "> LOAD </button>
                         </div>
                     </div>
 
@@ -129,7 +140,7 @@
                             
                             <% generalData.forEach(element => { %>
                                 <div class="card col-3 p-1"   >
-                                    <img class="w-100" style="height: 30%;"  src="<%= element.image1 %>" class="card-img-top" alt="...">
+                                    <img class="w-100" style="height: 30%;" name="companyImage" value="<%= element.image1 %>" src="<%= element.image1 %>" class="card-img-top" alt="...">
                                     <div class="card-body">
                                       <h3 class="card-title" data-hotelTariffs="${result[i].tariffDetails}" > <%= element.lastName %></h3> <small class="card-text" style="height: fit-content;"  ><%= element.district %> </small> <br>
                                       <small class="card-text bi bi-telephone-fill" style="height: fit-content;"  > <%= element.contactNumber %></small><br>
@@ -147,10 +158,10 @@
                                       
                                     </div>
                                     <div class="card-footer">
-                                        <form action="/custom/TariffSearch" method="post" >
-                                            <input type="submit" style="opacity: 0;" data-="<%= element.CompanyID %>" name="CompanySearchKey" value="">
-                                            <button class="btn btn-primary">Details</button>
-                                        </form>
+                                            
+                                            <input type="submit" style="opacity: 0;" name="CompanyID" data-="" name="CompanySearchKey" value="">
+                                            <button name="submitCompanyDetails"  value="<%=  element.CompanyID  %> " class="btn btn-primary">Details</button>
+                                        
                                        
                                       </div>
                                   </div>
@@ -166,3 +177,4 @@
                 </div>
                 </div>
         </div>
+    </form>
