--- a/views/MenuBarCustomer.ejs
+++ b/views/MenuBarCustomer.ejs
@@ -1,3 +1,4 @@
+<%- include('modal') %>
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <!-- jQuery -->
@@ -16,7 +17,9 @@
         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
         <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
         <li class="nav-item"><button type="button" id="idUserName" data-bs-toggle="modal" data-bs-target="#exampleModal"
-            style="background-color: rgb(98, 111, 98);" class="btn btn-success nav-link"> login </button> </li>
+            style="background-color: rgb(98, 111, 98);" class="btn btn-success nav-link"> LOGIN </button> </li>
+        <li class="nav-item"><button type="button" id="idUserName" data-bs-toggle="modal" data-bs-target="#VendureLogin"
+          style="background-color: rgb(98, 111, 98);" class="btn btn-success nav-link"> PARTNER LOGIN </button> </li>            
       </ul>
     </div>
   </div>
