--- a/views/companyWiseDetails.ejs
+++ b/views/companyWiseDetails.ejs
@@ -143,27 +143,21 @@
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="..." class="d-block w-100" alt="...">
+                                <img src="<%=result.image1%>"  style="height: 30%;" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>First slide label</h5>
                                     <p>Some representative placeholder content for the first slide.</p>
                                 </div>
                             </div>
+                            
                             <div class="carousel-item">
-                                <img src="..." class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Second slide label</h5>
-                                    <p>Some representative placeholder content for the second slide.</p>
-                                </div>
+                                
+                                <img src="<%=result.image2%>" class="d-block w-100" alt="...">
+                                
                             </div>
-                            <div class="carousel-item">
-                                <img src="..." class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Third slide label</h5>
-                                    <p>Some representative placeholder content for the third slide.</p>
-                                </div>
-                            </div>
+                            
                         </div>
+                        
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                             data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -175,22 +169,26 @@
                             <span class="visually-hidden">Next</span>
                         </button>
                     </div>
+                    
                 </div>
                 <div class="col-7 d-flex " style="flex-wrap: wrap;display: flex;">
-                    <%= console.log(result) %>
-                    <% result.forEach(element => { %>
+                     <!--  -->
+                     <% console.log(tariffDetails) %>
+                    <% tariffDetails.forEach(item => { %>
+                     
+                 
                         <div class="card col-4 p-1" style="width: 18rem;">
-                            <img src="<%=element  %>" class="card-img-top p-1" alt="...">
+                            <img src="<%=result.image1  %>" class="card-img-top p-1" alt="...">
                             <div class="card-body">
-                                <h4 class="card-title">Deluxe :7500/- <small>(2pax)</small> </h4>
-                                <small> Extra pax:850/-</small>
+                                <h4 class="card-title"><%=item.tariffName %> :<%=item.SpecialRent %> <small>(2pax)</small> </h4>
+                                <small> Extra pax:<%=item.extraPerson %>/-</small>
                                 <button class="btn btn-warning">
                                     <h6 class="card-title ">American Plan :500/- <small>(2pax)</small> </h6>
                                     <small> Extra Pax 350/-</small>
                                 </button>
                                 <div class="d-flex">
 
-
+                                    
                                     </button>
 
                                     <div class="d-flex">
@@ -200,10 +198,15 @@
                                                 class="btn bi bi-dash btn-primary "> </button> </button>
                                     </div>
                                 </div>
-                                <h4 class="card-title">Total Amount:<small>8000/- </small> </h4>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the
-                                    card's content.</p>
+                                <div class="row">
+                                    <div class="col btn"  id="discription+<%=item.tariffIndex %>" style="overflow:scroll; height: 200px;  ">
+                                        <p   class="card-text"><%=item.Discription %></p>
+                                    </div>
+                                     <div id="iddiscription" aria-hidden="true">
+                                        
+                                     </div>   
+
+                                </div>
                                 <a data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-primary">Add to
                                     Cart</a>
                             </div>
