--- a/views/modal.ejs
+++ b/views/modal.ejs
@@ -8,7 +8,6 @@
 <body>
  
  
-
 <form action="/vedurehomepage/loadhomepage" method="post">
     <div class="modal fade mr-2 " id="VendureLogin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -19,15 +18,15 @@
             </div>..
             <div class="modal-body"  >
             <div>
-                <small>Email or Mobile </small>
+                <small>Email or Mobile</small>
             </div>
-            <div class="input-group flex-nowrap mb-1  ">
+            <div class="input-group flex-nowrap mb-1">
                 <button class="btn btn-light bi bi-telephone-fill col-2"></button> <button class="btn-light btn bi bi-envelope-at-fill col-2" ></button>
-                <input type="text" name="Username" id="idUserName" class="btn btn-light" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
+                <input type="text" name="Username" id="idUserNameVendure " class="btn btn-light" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
             </div>
             <div class="input-group flex-nowrap  ">
                 <span class="btn btn-light col-4" >Password</span>
-            <input type="password" name="Password" id="idUserPassword" class="btn btn-light" placeholder="Password" aria-label="Password" aria-describedby="addon-wrapping">
+            <input type="password" name="Password" id="idUserPasswordVendure" class="btn btn-light" placeholder="Password" aria-label="Password" aria-describedby="addon-wrapping">
             </div>
             </div>..
             <div class="modal-footer">
@@ -40,6 +39,7 @@
     </div>
     </form>
  
+
    
        
 </body>
