--- a/views/MenuBarCustomer.ejs
+++ b/views/MenuBarCustomer.ejs
@@ -15,11 +15,18 @@
         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
-        <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
-        <li class="nav-item"><button type="button" id="idUserName" data-bs-toggle="modal" data-bs-target="#exampleModal"
+        <li class="nav-item"><a class="nav-link" href="/authenticate/signup">Signup</a></li>
+        
+            <% if (user.firstName) { %>
+         <button class="btn btn-success bi bi-power" ><%=user.firstName%></button>
+        <% } else { %>
+          <li class="nav-item"><button type="button" id="idUserName" data-bs-toggle="modal" data-bs-target="#exampleModal"
             style="background-color: rgb(98, 111, 98);" class="btn btn-success nav-link"> LOGIN </button> </li>
-        <li class="nav-item"><button type="button" id="idUserName" data-bs-toggle="modal" data-bs-target="#VendureLogin"
-          style="background-color: rgb(98, 111, 98);" class="btn btn-success nav-link"> PARTNER LOGIN </button> </li>            
+          <li class="nav-item"><button type="button" id="idUserName" data-bs-toggle="modal" data-bs-target="#VendureLogin"
+            style="background-color: rgb(98, 111, 98);" class="btn btn-success nav-link"> PARTNER LOGIN </button> </li>    
+          <% } %>
+
+                    
       </ul>
     </div>
   </div>
