--- a/views/header.ejs
+++ b/views/header.ejs
@@ -39,7 +39,7 @@
       </div>
       </div>..
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">OTP Login</button>
+        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#resetPassword">ChangePassword</button>
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         <button type="button" onclick="login()" class="btn btn-primary">Sign in </button>
       </div>
